[metadata]
name = stimwrap
version = 0.3.0
author = Nikos Karaiskos 
author_email = nikolaos.karaiskos@mdc-berlin.de
description = Stimwrap: a Python interface for STIM
long_description = file: README.rst
url = https://github.com/rajewsky-lab/stimwrap
project_urls =
    Bug Tracker = https://github.com/rajewsky-lab/stimwrap/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: OS Independent
license = MIT

[options]
zip_safe = False
python_requires = >=3.9
include_package_data = True
package_dir =
    stimwrap = stimwrap
packages = stimwrap
install_requires = 
    numpy
    h5py
    zarr==2.18.2